--- a/src/Particle-system-texture/Particle-System/Resources.resx
+++ b/src/Particle-system-texture/Particle-System/Resources.resx
@@ -124,6 +124,9 @@
   <data name="star" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\star.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="star_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\star-icon_.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="star_min" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\star-min.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
